# pathtrace

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Primitives.h  README.md  SceneLoader.cpp  SceneLoader.h  SettingsReader.cpp  SettingsReader.h  Transform.cpp  Transform.h  VulkanBuffer.cpp  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRaytracer.cpp  VulkanRaytracer.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTools.cpp  VulkanTools.h  camera.hpp  main.cpp  vulkanexamplebase.cpp  vulkanexamplebase.h
data/: analytic.test  scene1.test  scene4-specular.test  test_scene.test
shaders/: closesthit.rchit  closesthit_analyticdirect.rchit  closesthit_direct.rchit  closesthit_pathtracer.rchit  closesthit_spheres.rchit  closesthit_spheres_analyticdirect.rchit  closesthit_spheres_direct.rchit  closesthit_spheres_pathtracer.rchit  miss.rmiss  raycommon.glsl  raygen.rgen  raygen_pathtracer.rgen  spheres.rint
